--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,5 +1,5 @@
 
-
+/* 
 .style1{font-family: 'Dancing Script', cursive;
     font-family: 'Yellowtail', cursive; background: #fff748;
     color: #000;}
@@ -8,4 +8,4 @@
     font-family: 'Yellowtail', cursive; background: #6f4d8e;
     color: #fff;}
 
-.onHoverDark:hover { background-color: #4d2b6d !important; color: #BABABA !important;}
+.onHoverDark:hover { background-color: #4d2b6d !important; color: #BABABA !important;} */
